fix hidden overflow

--- a/isw-grupo-1/src/app/components/exercise-1/components/menu/menu.component.css
+++ b/isw-grupo-1/src/app/components/exercise-1/components/menu/menu.component.css
@@ -18,4 +18,5 @@ span {
 
 mat-label {
   display: inline-block;
+  overflow: hidden;
 }
